[gd_scene load_steps=11 format=2]

[ext_resource path="res://final/assets/Sprite_Pack/8 - Orc/Walking_(64 x 32).png" type="Texture" id=1]
[ext_resource path="res://final/actors/enemy/EnemyScript.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 64, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 9.62844, 13.3464 )

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "walk"
frame = 5
playing = true

[node name="FloorDetection" type="RayCast2D" parent="AnimatedSprite"]
position = Vector2( -10.7554, 9.30487 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 4
collide_with_areas = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.44739 )
shape = SubResource( 8 )

[node name="RaycastLeft1" type="RayCast2D" parent="."]
position = Vector2( 0, 9.30487 )
enabled = true
cast_to = Vector2( -10, 0 )
collision_mask = 4

[node name="RaycastRight1" type="RayCast2D" parent="."]
position = Vector2( 0, 9.30487 )
enabled = true
cast_to = Vector2( 10, 0 )
collision_mask = 4
